added proper video tag

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                    <p>Lorem ipsum color sit amer, consecter adipis cing elli, sed do eiusmod tempor incididunt ut labore et ettettur adig ipis cing elit. sed co eiusmod tempor incididunt.</p>
                    <button>contact us</button>
                </div>
-            <video src="https://www.youtube.com/watch?v=usADINi17cI&list=RDusADINi17cI"></video>
-            </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gB-ms07Ooe0" frameborder="0" allowfullscreen></iframe>            </div>
         </section>
     </div>
 </body>
